--- a/articles/410b3459dcde6b.md
+++ b/articles/410b3459dcde6b.md
@@ -1,7 +1,41 @@
 ---
-title: ""
-emoji: "🐕"
+title: "Sharpを使ったVite用の画像最適化プラグイン作成"
+emoji: "📸"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: []
+topics: ["Vite", "React", "Sharp"]
 published: false
 ---
+
+これは株式会社 TimeTree Advent Calendar 2024 の xx 日目の記事です。
+
+# はじめに
+
+TimeTree でフロントエンドエンジニアをしています、skitzville です！
+
+昨年同様「どうしよう、何書こう今年のアドベントカレンダー、、」と軽くパニックになるフェーズを経て、今回は**Sharp を使った Vite 用の画像最適化プラグイン作成**というトピックについてお話をしようと思います。
+
+# 「うわっ、私のサイト、遅すぎ・・・？」
+
+今回 Vite で画像最適化のプラグイン作成をするに至ったのには以下のような経緯がありました（前日談的な部分なので「どうやって作るのかだけ教えてよ！」という方は読み飛ばしちゃってください笑）
+
+先日友人から依頼を受け、Vite + React という構成のシンプルな Web サイトを作成する機会がありました。
+完成後のサイトを実機で表示してみたところ、「あれ、思ったよりも表示に時間がかかるな、、🤔」と感じ、試しに Lighthouse で計測をしてみたところ、、
+
+![Lighthouseでの計測結果](./images/lighthouse_score_01.png)
+
+**「うわっ、私のサイト、遅すぎ・・・？」**
+
+さらにこの計測結果をよくみてみると、どうやら画像の表示にかなりの時間がかかってしまってることがわかりました。
+ただ作成したサイトでは一般的に行われる画像最適化の対策のうちいくつか（Lazy Load、画像ファイル自体の圧縮 etc...）はすでに実施済み
+
+そこで他に画像最適化の方法がないものかと調べていたところ、画像の Webp・AVIF といった新しい形式の画像を使用するといった手法が
+
+# WebP・AVIF って？？
+
+WebP・AVIF はいずれも画像形式の種類で、メジャーな PNG や JPG よりもより新しい画像形式です。
+めちゃくちゃざっくりですが以下それぞれの特徴をまとめてみました。
+
+|        | WebP                                                                                                                                                                  | AVIF                                                                      |
+| ------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------- |
+| 読み方 | 公式な発表はないものの weppy（ウェッピー）と発音するらしい                                                                                                            | AV1 Image File Format の略、エーブイアイエフと読む                        |
+| 特徴   | - 透過・アニメ・圧縮に対応<br>- 他の画像フォーマットと比較しても軽量で高画質(JPEG と比較すると 20〜30%ほど軽量)<br>- 画像劣化のないロスレス形式と高圧縮の選択もできる | - 透過・アニメ・圧縮に対応<br>- WebP と比較してもさらに高画質でコンパクト |
