--- a/articles/410b3459dcde6b.md
+++ b/articles/410b3459dcde6b.md
@@ -256,3 +256,8 @@ const convertImagesToWebp: Plugin = {
 - Speed indexもプラグイン導入前後で速度が**6.9s → 3.4s**に変化！！
 
 またサイト上で使用している画像のファイルサイズもプラグイン導入後は、大きなもので約50%ほどファイルサイズを縮小することができました！
+
+# まとめ
+以上簡単ですがViteのplugin作成＆Sharpを使った画像最適化処理を行う方法についてのご紹介でした！
+~~この手のplugin、探せば絶対にどこかに転がってるはず＆自分でわざわざ作る必要もないかもですが~~　自分自身Viteのplugin開発についての知識がゼロだったので、今回の実装を通してplugin開発の大まかな流れをつかむことができました。
+同じようにViteでのplugin開発が気になっている方はぜひ一度チャレンジしてみてはいかがでしょうか！
